--- a/environment.yml
+++ b/environment.yml
@@ -1,302 +1,30 @@
-name: c:\Users\lucil\Gen-AI-Contest\.conda
+name: Kridic
 channels:
-  - pytorch
-  - nvidia
   - defaults
 dependencies:
-  - blas=1.0=mkl
-  - brotli-python=1.0.9=py311hd77b12b_8
   - bzip2=1.0.8=h2bbff1b_6
-  - ca-certificates=2024.3.11=haa95532_0
-  - certifi=2024.6.2=py311haa95532_0
-  - cuda-cccl=12.4.127=0
-  - cuda-cudart=12.1.105=0
-  - cuda-cudart-dev=12.1.105=0
-  - cuda-cupti=12.1.105=0
-  - cuda-libraries=12.1.0=0
-  - cuda-libraries-dev=12.1.0=0
-  - cuda-nvrtc=12.1.105=0
-  - cuda-nvrtc-dev=12.1.105=0
-  - cuda-nvtx=12.1.105=0
-  - cuda-opencl=12.4.127=0
-  - cuda-opencl-dev=12.4.127=0
-  - cuda-profiler-api=12.4.127=0
-  - cuda-runtime=12.1.0=0
-  - freetype=2.12.1=ha860e81_0
-  - gmpy2=2.1.2=py311h7f96b67_0
-  - icu=73.1=h6c2663c_0
-  - idna=3.7=py311haa95532_0
-  - jpeg=9e=h2bbff1b_1
-  - lcms2=2.12=h83e58a3_0
-  - lerc=3.0=hd77b12b_0
-  - libcublas=12.1.0.26=0
-  - libcublas-dev=12.1.0.26=0
-  - libcufft=11.0.2.4=0
-  - libcufft-dev=11.0.2.4=0
-  - libcurand=10.3.5.147=0
-  - libcurand-dev=10.3.5.147=0
-  - libcusolver=11.4.4.55=0
-  - libcusolver-dev=11.4.4.55=0
-  - libcusparse=12.0.2.55=0
-  - libcusparse-dev=12.0.2.55=0
-  - libdeflate=1.17=h2bbff1b_1
+  - ca-certificates=2024.7.2=haa95532_0
+  - expat=2.6.3=h5da7b33_0
   - libffi=3.4.4=hd77b12b_1
-  - libjpeg-turbo=2.0.0=h196d8e1_0
-  - libnpp=12.0.2.50=0
-  - libnpp-dev=12.0.2.50=0
-  - libnvjitlink=12.1.105=0
-  - libnvjitlink-dev=12.1.105=0
-  - libnvjpeg=12.1.1.14=0
-  - libnvjpeg-dev=12.1.1.14=0
-  - libpng=1.6.39=h8cc25b3_0
-  - libtiff=4.5.1=hd77b12b_0
-  - libuv=1.44.2=h2bbff1b_0
-  - libwebp-base=1.3.2=h2bbff1b_0
-  - lz4-c=1.9.4=h2bbff1b_1
-  - mkl-service=2.4.0=py311h2bbff1b_0
-  - mkl_fft=1.3.1=py311h743a336_0
-  - mkl_random=1.2.2=py311heda8569_0
-  - mpc=1.1.0=h7edee0f_1
-  - mpfr=4.0.2=h62dcd97_1
-  - mpir=3.0.0=hec2e145_1
-  - mpmath=1.3.0=py311haa95532_0
-  - nodejs=18.18.2=haa95532_0
-  - openjpeg=2.4.0=h4fc8c34_0
-  - openssl=3.0.14=h827c3e9_0
-  - pillow=10.3.0=py311h2bbff1b_0
-  - pip=24.0=py311haa95532_0
-  - pysocks=1.7.1=py311haa95532_0
-  - python=3.11.9=he1021f5_0
-  - pytorch-cuda=12.1=hde6ce7c_5
-  - pytorch-mutex=1.0=cuda
-  - pyyaml=6.0.1=py311h2bbff1b_0
-  - setuptools=69.5.1=py311haa95532_0
-  - six=1.16.0=pyhd3eb1b0_1
+  - openssl=3.0.15=h827c3e9_0
+  - pip=24.2=py310haa95532_0
+  - python=3.10.14=he1021f5_1
+  - setuptools=72.1.0=py310haa95532_0
   - sqlite=3.45.3=h2bbff1b_0
-  - sympy=1.12=py311haa95532_0
   - tk=8.6.14=h0416ee5_0
-  - typing_extensions=4.11.0=py311haa95532_0
-  - urllib3=2.2.1=py311haa95532_0
-  - vc=14.2=h2eaa2aa_1
-  - vs2015_runtime=14.29.30133=h43f2093_3
-  - wheel=0.43.0=py311haa95532_0
-  - win_inet_pton=1.1.0=py311haa95532_0
+  - tzdata=2024a=h04d1e81_0
+  - vc=14.40=h2eaa2aa_0
+  - vs2015_runtime=14.40.33807=h98bb1dd_0
+  - wheel=0.43.0=py310haa95532_0
   - xz=5.4.6=h8cc25b3_1
-  - yaml=0.2.5=he774522_0
   - zlib=1.2.13=h8cc25b3_1
-  - zstd=1.5.5=hd43e919_2
   - pip:
-      - absl-py==2.1.0
-      - accelerate==0.25.0
-      - aiofiles==23.2.1
-      - aiohttp==3.9.5
-      - aiosignal==1.3.1
-      - annotated-types==0.7.0
-      - anthropic==0.28.1
-      - antlr4-python3-runtime==4.9.3
-      - anyio==3.7.1
-      - asyncer==0.0.2
-      - attrs==23.2.0
-      - bidict==0.23.1
-      - blinker==1.8.2
-      - braceexpand==0.1.7
-      - build==1.2.1
-      - chainlit==1.1.301
-      - chardet==5.2.0
-      - charset-normalizer==3.3.2
-      - chevron==0.14.0
-      - click==8.1.7
-      - cloudpickle==3.0.0
-      - colorama==0.4.6
-      - colored==2.2.4
-      - coloredlogs==15.0.1
-      - cuda-python==12.3.0
-      - cython==3.0.10
-      - dataclasses-json==0.5.14
-      - datasets==2.19.1
-      - defusedxml==0.7.1
-      - deprecated==1.2.14
-      - diffusers==0.15.0
-      - dill==0.3.8
-      - distro==1.9.0
-      - dnspython==2.6.1
-      - docker-pycreds==0.4.0
-      - email-validator==2.1.1
-      - evaluate==0.4.2
-      - fastapi==0.110.3
-      - fastapi-cli==0.0.4
-      - fiddle==0.3.0
-      - filelock==3.14.0
-      - filetype==1.2.0
-      - flask==3.0.3
-      - frozenlist==1.4.1
-      - fsspec==2024.3.1
-      - gitdb==4.0.11
-      - gitpython==3.1.43
-      - googleapis-common-protos==1.63.1
-      - greenlet==3.0.3
-      - grpcio==1.64.0
-      - h11==0.14.0
-      - h5py==3.10.0
-      - httpcore==1.0.5
-      - httptools==0.6.1
-      - httpx==0.27.0
-      - huggingface-hub==0.23.1
-      - humanfriendly==10.0
-      - hydra-core==1.3.2
-      - importlib-metadata==7.1.0
-      - imutils==0.5.4
-      - intel-openmp==2021.4.0
-      - itsdangerous==2.2.0
-      - janus==1.0.0
-      - jinja2==3.1.4
-      - jiter==0.4.2
-      - joblib==1.4.2
-      - jsonpatch==1.33
-      - jsonpointer==2.4
-      - jsonschema==4.22.0
-      - jsonschema-specifications==2023.12.1
-      - langchain==0.2.5
-      - langchain-anthropic==0.1.15
-      - langchain-community==0.2.5
-      - langchain-core==0.2.7
-      - langchain-mongodb==0.1.6
-      - langchain-nvidia-ai-endpoints==0.1.0
-      - langchain-openai==0.1.7
-      - langchain-text-splitters==0.2.0
-      - langgraph==0.0.69
-      - langserve==0.2.2
-      - langsmith==0.1.77
-      - lark==1.1.9
-      - lazify==0.4.0
-      - libcst==1.4.0
-      - lightning-utilities==0.11.2
-      - literalai==0.0.604
-      - llvmlite==0.42.0
-      - markdown==3.6
-      - markdown-it-py==3.0.0
+      - jinja2==3.1.3
+      - llama-index-postprocessor-nvidia-rerank==0.3.1
       - markupsafe==2.1.5
-      - marshmallow==3.21.3
-      - mdurl==0.1.2
-      - mkl==2021.4.0
-      - mpi4py==3.1.6
-      - multidict==6.0.5
-      - multiprocess==0.70.16
-      - mypy-extensions==1.0.0
-      - nest-asyncio==1.6.0
-      - networkx==3.3
-      - ninja==1.11.1.1
-      - numba==0.59.1
-      - numpy==1.26.4
-      - nvidia-cublas-cu12==12.5.2.13
-      - nvidia-cuda-nvrtc-cu12==12.5.40
-      - nvidia-cuda-runtime-cu12==12.5.39
-      - nvidia-cudnn-cu12==9.1.1.17
-      - nvidia-modelopt==0.11.2
-      - omegaconf==2.3.0
-      - onnx==1.16.1
-      - openai==1.30.2
-      - opencv-python==4.9.0.80
-      - opentelemetry-api==1.25.0
-      - opentelemetry-exporter-otlp==1.25.0
-      - opentelemetry-exporter-otlp-proto-common==1.25.0
-      - opentelemetry-exporter-otlp-proto-grpc==1.25.0
-      - opentelemetry-exporter-otlp-proto-http==1.25.0
-      - opentelemetry-instrumentation==0.46b0
-      - opentelemetry-proto==1.25.0
-      - opentelemetry-sdk==1.25.0
-      - opentelemetry-semantic-conventions==0.46b0
-      - optimum==1.19.2
-      - orjson==3.10.3
-      - packaging==23.2
-      - pandas==2.2.2
-      - platformdirs==4.2.2
-      - polygraphy==0.49.9
-      - protobuf==4.25.3
-      - psutil==5.9.8
-      - pulp==2.8.0
-      - pyarrow==16.1.0
-      - pyarrow-hotfix==0.6
-      - pydantic==2.7.1
-      - pydantic-core==2.18.2
-      - pygments==2.18.0
-      - pyjwt==2.8.0
-      - pymongo==4.7.3
-      - pynvml==11.5.0
-      - pyproject-hooks==1.1.0
-      - pyproject-toml==0.0.10
-      - pyreadline3==3.4.1
-      - pytesseract==0.3.10
-      - python-dateutil==2.9.0.post0
-      - python-dotenv==1.0.1
-      - python-engineio==4.9.1
-      - python-graphviz==0.20.3
-      - python-multipart==0.0.9
-      - python-socketio==5.11.2
-      - pytorch-lightning==2.2.5
-      - pytz==2024.1
-      - pywin32==306
-      - referencing==0.35.1
-      - regex==2024.5.15
-      - requests==2.32.2
-      - rich==13.7.1
-      - rpds-py==0.18.1
-      - ruamel-yaml==0.18.6
-      - ruamel-yaml-clib==0.2.8
-      - safetensors==0.4.3
-      - scikit-learn==1.5.0
-      - scipy==1.13.1
-      - sentencepiece==0.2.0
-      - sentry-sdk==2.3.1
-      - setproctitle==1.3.3
-      - shellingham==1.5.4
-      - simple-websocket==1.0.0
-      - smmap==5.0.1
-      - sniffio==1.3.1
-      - sqlalchemy==2.0.30
-      - sse-starlette==1.8.2
-      - starlette==0.37.2
-      - strenum==0.4.15
-      - syncer==2.0.3
-      - tbb==2021.11.0
-      - tenacity==8.3.0
-      - tensorboard==2.16.2
-      - tensorboard-data-server==0.7.2
-      - tensorrt==9.3.0.post12.dev1
-      - tensorrt-bindings==9.3.0.post12.dev1
-      - tensorrt-cu12==10.0.1
-      - tensorrt-cu12-bindings==10.0.1
-      - tensorrt-cu12-libs==10.0.1
-      - tensorrt-libs==9.3.0.post12.dev1
-      - tensorrt-llm==0.9.0
-      - text-unidecode==1.3
-      - threadpoolctl==3.5.0
-      - tiktoken==0.7.0
-      - tokenizers==0.15.2
-      - toml==0.10.2
-      - tomli==2.0.1
-      - torch==2.2.0+cu121
-      - torchaudio==2.2.0
-      - torchmetrics==1.4.0.post0
-      - torchvision==0.17.0
-      - tqdm==4.66.4
-      - transformers==4.38.2
-      - typer==0.12.3
-      - typing-inspect==0.9.0
-      - tzdata==2024.1
-      - ujson==5.10.0
-      - uptrace==1.24.0
-      - utils==1.0.2
-      - uvicorn==0.25.0
-      - wandb==0.17.0
-      - watchfiles==0.20.0
-      - webdataset==0.2.86
-      - websockets==12.0
-      - werkzeug==3.0.3
-      - wget==3.2
-      - wrapt==1.16.0
-      - wsproto==1.2.0
-      - xxhash==3.4.1
-      - yarl==1.9.4
-      - zipp==3.18.2
-prefix: c:\Users\lucil\Gen-AI-Contest\.conda
+      - mpmath==1.3.0
+      - sympy==1.12
+      - torch==2.4.1+cu118
+      - torchaudio==2.4.1+cu118
+      - torchvision==0.19.1+cu118
+prefix: C:\Users\lucil\.conda\envs\Kridic
